# Idoven_Exercise1

./: Makefile  README.md  pyproject.toml
.github/workflow/: ci_cd.yml
.github/workflows/: ci_cd.yml
api/: __init__.py  bookstore_api.py
tests/: conftest.py  helper.py  test_bookstore_api_boundary.py  test_bookstore_api_crud.py  test_bookstore_api_ddt.py
