[tool.poetry]
name = "idoven-exercise1"
version = "0.1.0"
description = ""
authors = ["Martin S"]
readme = "README.md"
packages = [{include = "idoven_exercise1"}]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
pylint = "^2.17.5"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
